data/derived/sp14/progs/unify/prog3010.ml.out
Characters 8-19:
  let _ = digitsOfInt -2340124;;
          ^^^^^^^^^^^
Error: This expression has type int -> int list
       but an expression was expected of type int
